syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.kneo.keypractica.grpc.dictionary.lang";
option java_outer_classname = "DictionaryGrpcServices";

package kneo.dictionary;

service LanguageGrpcService {
  rpc GetAll (Empty) returns (LanguageProtoList) {}
}

message Empty{}

message MapWrapper {
  map<string, string> namesAndValues = 1;
}

message LanguageProtoList {
  repeated MapWrapper fieldsMap = 1;
}


